--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@supabase/supabase-js": "^2.39.0"
+    "@supabase/supabase-js": "^2.39.0",
+    "@vercel/analytics": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
