--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "@supabase/supabase-js": "^2.39.0",
-    "@vercel/analytics": "^1.1.1"
+    "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
